# algorithm_test

./: CMakeLists.txt
merkle_tree/: CMakeLists.txt  MerkleTree.h  MerkleTreeNode.h  main.cpp  sha256.h
numerical_algorithm/: 5_3_smoothing_formula.h  5_3_smoothing_formula_test.cpp  A_B_G_filtering.h  A_B_G_filtering_test.cpp  CMakeLists.txt  Complex.h  ComplexTest.cpp  GammaTest.cpp  GauseJordanMatrixInvTest.cpp  Gauss-Jordan-Elimination.h  Gauss-jordan-Elimination-test.cpp  GaussJordanMatrixInv.h  InGammaTest.cpp  Jacobi_Pass_Method.h  Jacobi_Pass_Method_test.cpp  Jacobian_method_for_eigenvalues_and_eigenvectors_of_real_symmetric_matrices.h  Jacobian_method_for_eigenvalues_and_eigenvectors_of_real_symmetric_matrices_test.cpp  MatrixMulti.h  MatrixMultiTest.cpp  Poly.h  Poly_test.cpp  QR_method_for_hirschenberg_matrix_eigenvalue.h  QR_method_for_hirschenberg_matrix_eigenvalue_test.cpp  RND.h  RND_test.cpp  SpecialFunction.h  b_bassel_1_test.cpp  bassel_2_test.cpp  bessel_1_test.cpp  cholesky_decompositionmethod.h  cholesky_decompositionmethod_test.cpp  eigenvector_corresponding_to_the_maximum_eigenvalue_of_power.h  eigenvector_corresponding_to_the_maximum_eigenvalue_of_power_test.cpp  elementary_similarity_transformation_method_for_hirschenberg_matrix.h  elementary_similarity_transformation_method_for_hirschenberg_matrix_test.cpp  err_function_test.cpp  evaluation_of_determinants.h  evaluation_of_determinants_test.cpp  fast_fourier_trans.h  fast_fourier_trans_test.cpp  (+32 more)
